--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome to our PBL project</p>
+    <p>Welcome to our PBL project and fuck off</p>
 </body>
 </html>
